// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Roulette Engine serialize should remenber bets 1`] = `
Array [
  Object {
    "amount": 2,
    "multiplier": 35,
    "playerId": "112233",
    "winningSlots": Array [
      Object {
        "color": 1,
        "number": 2,
      },
    ],
  },
]
`;

exports[`Roulette Engine serialize should remenber players 1`] = `
Array [
  Object {
    "balance": 108,
    "playerId": "112233",
  },
]
`;
